Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -454,7 +454,8 @@
    "outputs": [],
    "source": [
     "name = 'Liz Kaplan'\n",
-    "email = 'liz@ka-plan.com'"
+    "email = 'liz@ka-plan.com'\n",
+    "\"Send an email to \" + name + \" at \" + email +  \" to say how nice it was meeting yesterday.\""
    ]
   },
   {
