Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -564,22 +564,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Liz Kaplan'"
+       "'HI'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "name"
+    "name\n",
+    "'hi'.upper('hi')\n"
    ]
   },
   {
