Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -670,22 +670,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "42"
+       "str"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "name"
+    "type(42)\n",
+    "\n"
    ]
   },
   {
