Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -670,22 +670,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "int"
+       "'Liz Kaplan'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(42)\n",
+    "name\n",
     "\n"
    ]
   },
